--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -1,1 +1,5 @@
+/internal/
 /CustomKeywords.class
+/TempTestCase1539572964990.class
+/TempTestCase1539575767372.class
+/TempTestCase1539588828706.class
