--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -1,1 +1,8 @@
+/TempTestCase1539855843659.class
+/TempTestCase1539855926116.class
+/TempTestCase1539855965575.class
+/internal/
 /CustomKeywords.class
+/TempTestCase1539856034766.class
+/TempTestCase1539856151592.class
+/TempTestCase1539856165393.class
