--- a/bin/lib/.gitignore
+++ b/bin/lib/.gitignore
@@ -4,3 +4,5 @@
 /TempTestCase1546936634647.class
 /TempTestCase1546937490903.class
 /TempTestCase1546937747785.class
+/TempTestCase1546939343548.class
+/TempTestCase1546939356957.class
